# somfy-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
examples/: custom_command.rs  quick_start.rs
src/: api_client.rs  lib.rs
src/commands/: cancel_all_executions.rs  cancel_execution.rs  execute_action_group.rs  execute_actions.rs  fetch_events.rs  get_current_executions.rs  get_device.rs  get_device_state.rs  get_device_states.rs  get_devices.rs  get_devices_by_controllable.rs  get_execution.rs  get_setup.rs  get_setup_gateways.rs  get_version.rs  register_event_listener.rs  traits.rs  types.rs  unregister_event_listener.rs
src/config/: tls_cert.rs
src/err/: cert.rs  http.rs
tests/: http_tests.rs
tests/fixtures/api_responses/get_current_executions/: get_current_executions_valid_1.json
tests/fixtures/api_responses/get_device/: device_valid_1.json  states_valid_1.json  states_valid_2.json  states_valid_3.json  states_valid_4.json
tests/fixtures/api_responses/get_device_state/: device_state_valid_1.json
tests/fixtures/api_responses/get_device_states/: device_states_valid_1.json
tests/fixtures/api_responses/get_devices/: attributes_valid_1.json  attributes_valid_2.json  attributes_valid_3.json  devices_valid_1.json
tests/fixtures/api_responses/get_devices_by_controllable/: devices_by_controllable_valid_1.json
tests/fixtures/api_responses/get_execution/: get_execution_valid_1.json
tests/fixtures/api_responses/get_gateways/: gateways_valid_1.json
tests/fixtures/api_responses/get_setup/: setup_valid_1.json
tests/fixtures/api_responses/get_version/: version_valid_1.json
tests/fixtures/api_responses/register_event_listener/: event_listener_valid_1.json
tests/mock_api/: db.json  routes.json
