[package]
name = "sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
rstest = "0.26.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.98"
dirs = "6.0.0"
log = "0.4.27"
urlencoding = "2.1.3"