[package]
name = "somfy-sdk"
authors = ["Markus Ziller"]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.82"

description = "A Rust-based SDK for interacting with Somfy smart home devices and APIs."
repository = "https://github.com/markusz/somfy-sdk"
keywords = ["somfy", "overkiz"]
categories = ["api-bindings"]

[features]
default = []
generic-exec = []

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
rstest = "0.26.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.99"
dirs = "6.0.0"
log = "0.4.27"
urlencoding = "2.1.3"
thiserror = "2.0.14"